problems-jvm: 0992 kotlin solution